<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.pnpapp.Main3Activity">

    <TextView
        android:id="@+id/txtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistration" />

    <EditText
        android:id="@+id/txtSurnameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameReg" />

    <EditText
        android:id="@+id/txtUsernameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurnameReg" />

    <EditText
        android:id="@+id/txtPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameReg" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:onClick="onRegistration"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswd" />


    <ImageButton
        android:id="@+id/usernameHelpButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/txtUsernameReg"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/txtUsernameReg"
        android:layout_toRightOf="@+id/txtUsernameReg"
        android:adjustViewBounds="true"
        android:background="@drawable/circle_button"
        android:onClick="onUsername"
        android:scaleType="fitCenter"
        android:src="@drawable/help"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsernameReg"
        app:layout_constraintEnd_toEndOf="@+id/txtUsernameReg" />

    <ImageButton
        android:id="@+id/passwordHelpButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/txtPasswd"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/txtPasswd"
        android:layout_toRightOf="@+id/txtPasswd"
        android:adjustViewBounds="true"
        android:background="@drawable/circle_button"
        android:onClick="onPassword"
        android:scaleType="fitCenter"
        android:src="@drawable/help"
        app:layout_constraintBottom_toBottomOf="@+id/txtPasswd"
        app:layout_constraintEnd_toEndOf="@+id/txtPasswd" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="340dp"
        android:layout_height="116dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pnp_icon" />


</android.support.constraint.ConstraintLayout>
